# sod

./: .gitignore  COPYING  KNOWN_ISSUES.md  README.md  checksumfs.py  hashfs.py  pyproject.toml  setup.py  sod.py
docs/manual/: sod-add.md  sod-aux-add.md  sod-aux-list.md  sod-aux-remove.md  sod-aux-update.md  sod-aux.md  sod-commit.md  sod-config.md  sod-diff.md  sod-init.md  sod-log.md  sod-reset.md  sod-restore.md  sod-status.md  sod.md
examples/: sod-redo-renames
misc/: bump-copyright-years.sh  dumpdocs.sh
sod/: __init__.py  gittools.py  hashing.py  repository.py  sod.py
sod/aux/: plain.py
test/: conftest.py  test_core.py  test_core_subdir_cwd.py  test_reset.py  test_restore.py  test_status.py  utils.py
