# This file is part of sod.
#
# Copyright (C) 2020,2021,2024 Martin Kampas <martin.kampas@ubedi.net>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or (at
# your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools"]
#requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sod"
version = "0.1"
#dynamic = ["version"]
dependencies = [
	"click",
	"pygit2",
	"pytest",
]

[project.scripts]
sod = "sod.sod:cli"

[tool.setuptools]
packages = ["sod"]
